# coderesidency

./: .env copy.example  .env.example  .gitignore  ARCHITECTURE.md  Makefile  docker-compose.yml  readme.md  session_manager.py  walkthrough.md.resolved
.github/agents/: Coder.agent.md  Designer.agent.md  FastCoder.agent.md  Orchestrator.agent.md  Planner.agent.md  ReviewerCodex.agent.md  ReviewerGemini.agent.md  ReviewerSonnet.agent.md
.roo/: mcp.json
Desktop/coderesidency/backend/: .gitignore  session_manager.py
agents/: actor.py  director.py  evaluator.py
backend/: Dockerfile  debug_appwrite_runtime.py  pyproject.toml  requirements.txt  test_appwrite.py
backend/app/: config.py  main.py
backend/app/agents/: coding_challenge_agent.py  dual_agent.py
backend/app/database/: appwrite_client.py
backend/app/docker_manager/: sandbox.py
backend/app/models/: challenge.py  chat.py  session.py  user.py
backend/app/routers/: auth.py  chat.py  coding_challenge.py  eval.py  modules.py  scenarios.py  users.py
backend/app/scoring/: engine.py
backend/scripts/: setup_db.py  setup_phase2.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  template.tsx
frontend/app/auth/callback/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/leaderboard/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: AuthProvider.tsx  MarqueeText.tsx  Navbar.tsx
frontend/lib/: api.ts  appwrite.ts
frontend/store/: authStore.ts
scenarios/: bakery_owner.json  non_profit_director.json
(+10 files in other folders)
