[tool.poetry]
name = "coderesidency-backend"
version = "0.1.0"
description = "CodeResidency FastAPI Backend"
authors = ["CodeResidency Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"
langchain = "^0.2.0"
langchain-google-genai = "^1.0.0"
langgraph = "^0.1.0"
appwrite = "^6.0.0"
redis = "^5.0.0"
docker = "^7.0.0"
python-multipart = "^0.0.9"
httpx = "^0.27.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pypdf = "^4.2.0"
python-docx = "^1.1.0"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
